Fix where automation was wrapping on some browsers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -338,7 +338,7 @@ p {
 @media (min-width: 48.1em) {
   /* line 61, ../../scss/hero.scss */
   .site-hero_tagline {
-    width: 18.4em;
+    width: 18.8em;
   }
 }
 @media (max-width: 20em) {
