--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -61,7 +61,7 @@
 .site-hero_tagline {
   width: 19em;
   @include size-large {
-    width: 18.4em;
+    width: 18.8em;
   }
   @include space-between;
 }
